app/globals.css
@import "tailwindcss";
@import "tw-animate-css";
@import "shadcn/tailwind.css";

@custom-variant dark (&:where(.dark, .dark *));

:root {
  --background: oklch(98.006% 0.00973 253.023);
  --foreground: #0B0F1F;

  --primary: #0c7c61;
  --primary-foreground: #159577;

  --secondary: #dcfce7;
  --secondary-foreground: oklch(41.1% 0.14828 259.782);

  --muted: oklch(92.191% 0.0001 271.152);
  --muted-foreground: oklch(0.556 0 0);

  --stroke: #eef0f2;

  --accent: oklch(0.97 0 0);
  --accent-foreground: oklch(68.449% 0.01484 276.93);

  --border: oklch(88.531% 0.0001 271.152);
  --input: oklch(0.922 0 0);
  --ring: oklch(0.708 0 0);
  --radius: 0.625rem;

  --hero-start: #2d7fff;
  --hero-middle: #0f5edb;
  --hero-end: #0b2d6b;
}

.dark {
  --background: oklch(17.375% 0.03391 271.86);
  --foreground: oklch(98.006% 0.00973 253.023);

  --primary: #0b5946;
  --primary-foreground: #19c19a;

  --secondary: oklch(25% 0.05 259.858);
  --secondary-foreground: oklch(85% 0.14828 259.782);

  --muted: oklch(20% 0.01 271.152);
  --muted-foreground: oklch(65.556% 0.0001 271.152);

  --accent: oklch(25% 0.02 276.93);
  --accent-foreground: oklch(85% 0.01484 276.93);

  --border: oklch(36.807% 0.00658 274.838);
  --input: oklch(20% 0.0001 271.152);
  --ring: oklch(65% 0.21518 260.702);

  --hero-start: #2d7fff;
  --hero-middle: #0f5edb;
  --hero-end: #0b2d6b;
}

@theme inline {
  --color-hero-start: var(--hero-start);
  --color-hero-middle: var(--hero-middle);
  --color-stroke: var(--stroke);
  --color-hero-end: var(--hero-end);
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-ring: var(--ring);
  --color-input: var(--input);
  --color-border: var(--border);
  --color-accent-foreground: var(--accent-foreground);
  --color-accent: var(--accent);
  --color-muted-foreground: var(--muted-foreground);
  --color-muted: var(--muted);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --radius-sm: calc(var(--radius) * 0.6);
  --radius-md: calc(var(--radius) * 0.8);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) * 1.4);
  --radius-2xl: calc(var(--radius) * 1.8);
  --radius-3xl: calc(var(--radius) * 2.2);
  --radius-4xl: calc(var(--radius) * 2.6);
}

button {
  @apply cursor-pointer;
}

